--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,8 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="C:/Users/Wojtek/Desktop/Coder Project/calendar/LGoodDatePicker-10.3.1-executable-demo.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Wojtek/Desktop/Coder Project/calendar/LGoodDatePicker-10.3.1-javadoc.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Wojtek/Desktop/Coder Project/calendar/LGoodDatePicker-10.3.1.jar" sourcepath="C:/Users/Wojtek/Desktop/Coder Project/calendar/LGoodDatePicker-10.3.1-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Wojtek/Desktop/Coder Project/calendar/jdatepicker-1.3.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
