--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="lib" path="C:/Users/Wojtek/Desktop/Coder Project/calendar/LGoodDatePicker-10.3.1-javadoc.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Wojtek/Desktop/Coder Project/calendar/LGoodDatePicker-10.3.1.jar" sourcepath="C:/Users/Wojtek/Desktop/Coder Project/calendar/LGoodDatePicker-10.3.1-sources.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Wojtek/Desktop/Coder Project/calendar/jdatepicker-1.3.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Wojtek/workspace/sqlite-jdbc-3.21.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
